--- a/src/App.scss
+++ b/src/App.scss
@@ -1,55 +1,220 @@
+html {
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+
 
   // Header styles
 
-  // Stats styles
-
-  .update {
-    margin-top: 10vw;
+  .header {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-end;
+    height: 12vw;
+    background-color: #02195E;
 
-    h4 {
-      font-size: 20px;
+    h1 {
+      margin: 0px;
+      font-size: 18pt;
+      color: #FED801;
+
     }
 
-    .data-values {
-      width: 70%;
+    h2 {
+      margin: 0px;
+      color: white;
+      font-weight: normal;
+      font-size: 25pt;
+      // letter-spacing: .1rem;
+    }
+
+    div {
+      margin-left: 10vw;
+    }
+
+    div:first-of-type {
+      text-align: left;
+      padding-bottom: 20px;
+    }
+
+    .line {
+      height: 10px;
+      width: 10px;
+      background-color: #FED801;
+      width: 25vw;
+    }
+  }
+
+  .content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+
+    .subcontent {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
+      justify-content: center;
+      // width: 100%;
+      height: 95%;
 
-      label {
-        padding-right: 10px;
-        font-size: 20px;
-      }
-      input {
-        border: none;
-        border-bottom: 1px solid rgb(150, 150, 150);
-        text-align: center;
-        width: 40px;
-        font-size: 18px;
+      //Notes styles
+    
+      .note {
+        background-color: rgba(2, 25, 94, 0.7);
+        width:100%;
+        flex:1;
+        margin-bottom: 10px;
       }
 
-      input[type="number"] {
-        -moz-appearance: none;
+      .calendar {
+        background-color: rgba(9, 37, 130, 0.7);
+        width:100%;
+        flex: 1
+        
       }
 
-      input::-webkit-outer-spin-button,
-      input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
+    }
+
+    // Stats styles
+
+  .stats {
+
+    background-color: rgba(45, 94, 255, 0.7);
+    width: 60%;
+    height: 95%;
+    display: flex;
+    flex-direction: column;
+
+    h2 {
+      color: #FED801;
+      margin-left: 8vw;
+      text-align: left;
+    }
+
+    table {
+      width: 70%;
+      border-collapse: collapse;
+      text-align: left;
+      margin-left: 8vw;
+
+
+      thead {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.658);
+        font-size: 15pt;
+        th:last-of-type{
+          text-align: right;
+          
+        }
+        
+        th {
+          font-weight: 600;
+
+        }
       }
 
-      div {
-        padding: 0 40px 0 40px;
-        // min-width: 200px;
+      th, td {
+        vertical-align: middle;
+        padding: 10px;
+      }
+
+    
+
+      tr:hover {
+        background-color: rgba(254, 216, 1, 0.575)
+      }
+
+      tr {
+        td:last-of-type{
+          text-align: right;
+        }
+        td {
+          // font-weight: 400;
+        }
+      }
+
+      tfoot {
+        color:rgb(2, 25, 94);
+        // color: #2D5EFF;
+        font-weight: bold;
+        td:last-of-type{
+          text-align: right;
+
+        }
+      }
+
+    }
+    
+
+    h4 {
+      font-size: 14pt;
+      text-align: left;
+      // width: 100%;
+      margin-left: 8vw;
+      color: #FED801;
+    }
+    .update {
+      // margin-top: 10vw;
+      // width: 100vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 30%;
+  
+  
+      .data-values {
+        width: 70%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+  
+        label {
+          padding-right: 10px;
+          font-size: 20px;
+        }
+        input {
+          border: none;
+          border-bottom: 1px solid #FED801;
+          text-align: center;
+          width: 40px;
+          font-size: 18px;
+          background-color: transparent;;
+        }
+  
+        input[type="number"] {
+          -moz-appearance: none;
+        }
+  
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+  
+        div {
+          padding: 0 40px 0 40px;
+          // min-width: 200px;
+        }
       }
     }
   }
+  }
+
+
+  
+  
+  
 }
