--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ html {
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      // width: 100%;
+      width: 35%;
       height: 95%;
 
       //Notes styles
@@ -75,6 +75,85 @@ html {
         width:100%;
         flex:1;
         margin-bottom: 10px;
+
+        h3 {
+          color: #FED801;
+          text-align: left;
+          margin-left: 3vw;
+        }
+        .form {
+          display: flex;
+          flex-direction: column;
+          margin-left: 3vw;
+
+          div {
+            display: flex;
+            align-items: center;
+
+            label {
+              margin-right: 1vw;
+            }
+            // justify-content:
+          }
+
+          div:last-of-type{
+            margin-top: 10px;
+          }
+          button {
+            width: 20%;
+            border: none;
+            background-color: transparent;
+            border: 1px solid #02195E;
+            margin-top: 20px;
+
+            &:hover {
+              background-color: #FED801;
+              color: #02195E;
+            }
+
+          }
+
+          textarea{
+            background-color: transparent;
+            border: 1px solid #FED801;
+          }
+
+          input[type='date'] {
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid #FED801;
+            color: white;
+          }
+        }
+
+        .all-notes {
+          overflow-y: scroll;
+          height: 120px;
+          margin-left: 3vw;
+          margin-top: 1vw;
+
+
+          .new-note {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            align-items: center;
+
+            p:first-of-type{
+              font-size: 8pt;
+              margin: 0px;
+              padding: 0px;
+              align-self: flex-end;
+            }
+
+            p:last-of-type{
+              margin: 0px;
+              margin-left: 1vw;
+            }
+
+          }
+
+        }
       }
 
       .calendar {
