--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,10 @@ html {
   width: 100vw;
   height: 100vh;
 
+  @media screen and (max-width: 761px) {
+    height: auto;
+  }
+
   // Header styles
 
   .header {
@@ -58,6 +62,11 @@ html {
     align-items: center;
     height: 100%;
 
+    @media screen and (max-width: 761px) {
+      flex-direction: column;
+      // height: 3000px;
+    }
+
     .subcontent {
       display: flex;
       flex-direction: column;
@@ -66,6 +75,12 @@ html {
       width: 35%;
       height: 95%;
       overflow-y: scroll;
+
+      @media screen and (max-width: 761px) {
+        width: 100%;
+        height: 100%;
+        overflow: visible;
+      }
 
       //Notes styles
 
@@ -201,6 +216,13 @@ html {
       flex-direction: column;
       border-radius: 10px;
       overflow-y: scroll;
+
+      @media screen and (max-width: 761px) {
+        width: 100%;
+        height: 100vh;
+        overflow: visible;
+        margin-bottom: 2vw;
+      }
 
       h2 {
         color: #fed801;
